basic trees, rotation, collision detection

--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@ body {
 	margin: 0;
 }
 
+#points {
+	position: absolute;
+	width: 30%;
+	background-color: rgba(0,0,0,0.5);
+	color: white;
+	font-family: Arial;
+	padding: 30px;
+}
 
 </style>
 </head>
 <body>
 
+<div id="points">Size: 10</div>
 <canvas id="gamecanvas"></canvas>
 
 
