terrain generation stuff

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ body {
 
 
 <script src="js/three.min.js"></script>
+<script src="js/ImprovedNoise.js"></script>
+
 <script src="js/game.js"></script>
 
 </body>
