--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ body {
 
 
 <script src="js/three.min.js"></script>
+<script src="js/OBJLoader.js"></script>
 <script src="js/ImprovedNoise.js"></script>
+<script src="js/snow.js"></script>
 
 <script src="js/game.js"></script>
 
